<resources>
    <string name="app_name">Video Downloader Browser Hub</string>
    <string name="largeBanner" translatable="false">ca-app-pub-5972202469838280/4153178013</string>
    <string name="App_ID" translatable="false">ca-app-pub-5972202469838280~6495662755</string>
    <string name="App_Open_Ad" translatable="false">ca-app-pub-5972202469838280/5648500199</string>
    <string name="Interstitial_Home_ID" translatable="false">ca-app-pub-5972202469838280/3325589186</string>
    <string name="Interstitial_Home_ID_High" translatable="false">ca-app-pub-5972202469838280/8334373287</string>
    <string name="Native_ID" translatable="false">ca-app-pub-5972202469838280/1209727580</string>
    <string name="Native_static" translatable="false">ca-app-pub-5972202469838280/1209727580</string>
    <string name="Native_Home" translatable="false">ca-app-pub-5972202469838280/1209727580</string>
    <string name="Native_Home1" translatable="false">ca-app-pub-5972202469838280/7920629688</string>
    <string name="Native_Home_high" translatable="false">ca-app-pub-5972202469838280/5516638259</string>
    <string name="Native_Exit" translatable="false">ca-app-pub-5972202469838280/3367762926</string>
    <string name="facebook_app_id" translatable="false">1505691637644414</string>
    <string name="facebook_client_token" translatable="false">711332d1d3ea4ea1aeb1c366095588d6</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="video_orientation_video">Video orientation</string>
    <string name="video_orientation_system">Device orientation</string>
    <string name="rationale_permissions">App requires some permissions to function properly.</string>
    <string name="button_crop">Resize</string>
    <string name="video_resize_crop">Crop</string>
    <string name="video_resize_fit">Fit</string>
    <string name="button_rotate">Rotate</string>
    <string name="error_details">error detail</string>
    <string name="toast_internet_warning">Please check your network connection!</string>
    <string name="toast_error">Something went wrong, please try again!</string>
    <string name="thanks_for_leaving_a_nice_review">Hope you enjoy our app</string>
    <string name="appreciate">If you like our app , please rate us 5 stars!</string>
    <string name="rate_for_us">Please Rate for us</string>
    <string name="your_opinion_is_important">Your opinion is important</string>
    <string name="billing_service_not_available">Billing Service Not Available</string>
    <string name="productId" translatable="false">remove_ads</string>
    <string name="productIdWaterMark">remove_watermark</string>
    <string name="purchase_is_not_supported">Purchase Is Not Supported</string>
    <string name="https_google_com_example_mkv">https://google.com/example.mkv</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="str_request_permissions">Please allow all permissions in order to use the app.</string>
    <string name="enter_network_url">Enter network URL</string>
    <string name="history">History</string>
    <string name="this_action_can_contain_ads">This action can contain ad</string>
    <string name="hd_video_player">Video Downloader Browser Hub</string>
    <string name="all_in_one_video_player">All in one video player</string>
    <string name="folders">Folders</string>
    <string name="all_videos">All Videos</string>
    <string name="recent_played">Recent Played</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="play">Play</string>
    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="privatee">Private</string>
    <string name="add_private_files">Add private videos or audios</string>
    <string name="unknown">unknown</string>
    <string name="private_folder">Private</string>
    <string name="tools">Tools</string>
    <string name="security_settings">Security Settings</string>
    <string name="item_options">Item Options</string>
    <string name="enter_4_digit_pin">Enter 4-Digit PIN</string>
    <string name="todo">pin count</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="remove">Remove</string>
    <string name="wrong_pin">Wrong Pin</string>
    <string name="forget_pin">Forget Pin?</string>
    <string name="verify_password">Verify Password</string>
    <string name="unlock">Unlock</string>
    <string name="details">Details</string>
    <string name="back_navigation">Back Navigation</string>
    <string name="video_thumbnail">Video Thumbnail</string>
    <string name="property">Property</string>
    <string name="name">Name</string>
    <string name="path">Path</string>
    <string name="size">Size</string>
    <string name="resolution">Resolution</string>
    <string name="do_you_want_to_delete_this">Do you want to permanently delete this?</string>
    <string name="files_will_be_moved_to_public">File will be moved to public.</string>
    <string name="the_entered_pin_does_not_match_please_try_again">The entered PIN does not match. Please try again.</string>
    <string name="enter_pin_again">Enter PIN again.</string>
    <string name="select_video">Select Video</string>
    <string name="unfavourite">Remove</string>
    <string name="no_videos_found">No videos found</string>
    <string name="create_pin">Create Pin</string>
    <string name="permission_required">Permission Required</string>
    <string name="please_grant_permission_to_ensure_the_normal_use_of_this_app">Please grant permission to ensure the \nnormal use of this app.</string>
    <string name="all_videos_amp_audios"><![CDATA[All Videos & audios]]></string>
    <string name="all_subtitles">All subtitles</string>
    <string name="grand_permission">Grant Permission</string>
    <string name="not_allow">Not Allow</string>
    <string name="oops_no_video_is_available">Oops! no video is available</string>
    <string name="get_preminum">Get Preminum</string>
    <string name="access_all_features">Access all features.</string>
    <string name="oops_no_folder_is_available">Oops! no folder is available</string>
    <string name="oops_no_audio_is_available">Oops! no audio is available</string>
    <string name="oops_no_album_is_available">Oops! no album is available</string>
    <string name="oops_no_artist_is_available">Oops! no artist is available</string>
    <string name="oops_no_favourite_audio_is_available">Oops! no Favourite audio is available</string>
    <string name="tv_permission">To play video, audio and subtitle we need access to all files on your device..</string>
    <string name="allow_access">ALLOW ACCESS</string>
    <string name="priceoff">50% Off</string>
    <string name="duration_of_purchase">Duration of Purchase</string>
    <string name="actual_price">Actual Price</string>
    <string name="price_and_trial">Free Trial</string>
    <string name="monthlydetail">You will be charged this amount every month</string>
    <string name="yearlydetail">You will be charged this amount every year</string>
    <string name="price_off">Price Off</string>
    <string name="get_premium">Get Premium</string>
    <string name="recurring">Recurring billing cancel anytime</string>
    <string name="term">Term of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="purchasecontinue">Continue</string>
    <string name="repeat_off">repeat off</string>
    <string name="repeat_all">repeat all songs</string>
    <string name="repeat_current">repeat</string>
    <string name="repeat_current_video">Repeat current</string>
    <string name="set_as_ringtone">set as ringtone</string>
    <string name="shuffle_enabled">shuffle enabled</string>
    <string name="speed">Speed</string>
    <string name="defaul_song_image">defaul song image</string>
    <string name="back_button_player">back button</string>
    <string name="backgroud_image">Background image</string>
    <string name="equalizer_image">equalizer Image</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="edit_track_info">Edit track info</string>
    <string name="no_music_found">No Songs found</string>
    <string name="ad_break">Ad Break</string>
    <string name="select_audio">Select Audio</string>
    <string name="set_security_question">Set Security Question</string>
    <string name="help_to_rest_your_password">Help to rest your password</string>
    <string name="answer">Answer</string>
    <string name="verify_security_question">Verify Security Question</string>
    <string name="give_answer_to_reset_pin">Give answer to reset pin</string>
    <string name="do_you_really_want_to_reset_pin">"  Do you really want to reset pin?"</string>
    <string name="cant_find_whatsapp_dir">oops, can\'t find directory</string>
    <string name="no_files_found">No file found</string>
    <string name="time">Time</string>
    <string name="date_added">Date Added</string>
    <string name="show_details">Show Details</string>
    <string name="done">Done</string>
    <string name="to_end">To end</string>
    <string name="_60_mins">60 mins</string>
    <string name="_30_mins">30 mins</string>
    <string name="_10_mins">10 mins</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="off">Off</string>
    <string name="use">Use</string>
    <string name="ccancel">Cancel</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="in_use">In Use</string>
    <string name="play_speed">Play Speed</string>
    <string name="okay">Okay</string>
    <string name="track_info">Track info</string>
    <string name="_0_25x">0.25x</string>
    <string-array name="dropdown_items">
        <item>What’s your favorite color?</item>
        <item>What’s your pet name?</item>
        <item>What’s your lucky number?</item>
    </string-array>
    <string name="eq">Equalizer</string>
    <string name="sort_by">Sort by</string>
    <string name="date">Date</string>
    <string name="length">Length</string>
    <string name="from_a_to_z">From A to Z</string>
    <string name="from_z_to_a">From Z to A</string>
    <string name="cancel_text">Cancel</string>
    <string name="download">Download</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="mp3_converter">Mp3 converter</string>
    <string name="themes">Themes</string>
    <string name="video_Cutter">Video Cutter</string>
    <string name="equalizer">Equalizer</string>
    <string name="search_subtitle_from">Search subtitle from</string>
    <string name="opensubtitle_org">"opensubtitle.org</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="search">Search…</string>
    <string name="resume">Resume</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="uninstall_disclaimer">Dear User\nWe want to inform you that before uninstalling or clearing app data, unlock all secured videos to prevent data loss. Failure to do so may result in permanently losing access to your content. Your file would be loss if you do not unlock the file before uninstalling or clearing the app data.Thanks</string>
    <string name="network_stream">Network Stream</string>
    <string name="settings">Settings</string>
    <string name="ask_everytime">Ask everytime</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
</resources>