<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item
        android:id="@+id/addToPlayList"
        android:title="@string/add_to_playlist" />
    -->
    <item
        android:id="@+id/album"
        android:title="@string/album" />
    <item
        android:id="@+id/artist"
        android:title="@string/artist" />
    <item
        android:id="@+id/showDetails"
        android:title="@string/show_details" />
    <item
        android:id="@+id/setAsRingtone"
        android:title="@string/set_as_ringtone" />
    <item
        android:id="@+id/share"
        android:title="@string/share" />
<!--    <item
        android:id="@+id/delete"
        android:title="@string/delete" />-->
</menu>