<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/playAudio"
        android:fontFamily="@font/montserrat_regular"
        android:title="@string/play" />
    <item
        android:id="@+id/favoriteAudio"
        android:fontFamily="@font/montserrat_regular"
        android:title="@string/favourite" />
    <item
        android:id="@+id/shareAudio"
        android:fontFamily="@font/montserrat_regular"
        android:title="@string/share" />
    <!-- <item
         android:id="@+id/renameAudio"
         android:fontFamily="@font/montserrat_regular"
         android:title="@string/rename" />-->
    <item
        android:id="@+id/deleteAudio"
        android:fontFamily="@font/montserrat_regular"
        android:title="@string/delete" />
</menu>