<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_16sdp"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:backgroundTint="@color/card_bg"
    android:background="@drawable/alert_dialog_rectangle"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/brand_text_primary"
        android:text="@string/resume"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/myRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_15sdp"
        android:checkedButton="@id/radio_button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radio_button1"
            android:layout_width="wrap_content"
            android:textColor="@color/brand_text_primary"
            android:layout_height="wrap_content"
            android:text="@string/ask_everytime" />

        <RadioButton
            android:id="@+id/radio_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_text"
            android:text="@string/always" />

        <RadioButton
            android:id="@+id/radio_button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_text"
            android:text="@string/never" />
    </RadioGroup>


    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_text"
        android:textSize="@dimen/_12ssp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:textColor="@color/gray_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/okay"
        app:layout_constraintTop_toBottomOf="@+id/myRadioGroup" />


    <TextView
        android:id="@+id/okay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay"
        android:layout_margin="@dimen/_10sdp"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/gSelector_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/myRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/myRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>