<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:background="@drawable/bg_disclaimer"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.status_saver.statusnew.BottomsheetStatusFragment">
        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/disclaimer"
            android:textColor="@color/brand_text_primary"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/tv_select_file"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_regular"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.58"
            android:layout_marginTop="@dimen/_20sdp"
           android:text="@string/uninstall_disclaimer"
            android:textColor="@color/brand_text_primary"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="@+id/tv_subtitle"
            app:layout_constraintStart_toStartOf="@+id/tv_subtitle"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle" />


        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/urbanist"
            android:padding="12dp"
            android:text="@string/ok"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/gSelector_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_file" />


    </androidx.constraintlayout.widget.ConstraintLayout>